# django-api-base-2025

./: .gitignore  CLAUDE.md  Makefile  README.md  apibase-features.csv  conftest.py  devenv.nix  devenv.yaml  mkdocs.yml  pyproject.toml  pyrightconfig.json  treefmt.toml
.claude/: .lsp.json  CLAUDE.md  settings.local.json
.claude/homunculus/: observations.jsonl
.github/workflows/: docs.yml  release-docs.yml
apibase/: __init__.py  _spectacular.py  archives.py  fields.py  filters.py  identity.py  permissions.py  requests.py  routers.py  schema.py  serializers.py  storages.py  urls.py  urn.py  utils.py  views.py  viewsets.py
apibase/contrib/schema/: query.py
apibase/gql/: types.py
apibase/graphql/: __init__.py  converters.py  fields.py  mixins.py  models.py  utils.py
apibase/graphql/tests/: conftest.py  test_converters.py  test_distinct.py
apibase/meta/: serializers.py  viewsets.py
apibase/settings/: __init__.py  settings.py
apibase/tests/: factories.py  test_graphene_converter.py  tests.py
docker/: Dockerfile
docs/: index.md
docs/appendix/: faq.md  glossary.md  migration.md  troubleshooting.md
docs/architecture/: architecture-review.html  design-decisions.md  graphql-design.md  index.md  modules.md  overview.md  prd-deepen-apibase-1-4.md  rest-design.md  urn-system.md
docs/development/: changelog.md  coding-standards.md  contributing.md  index.md  release.md  setup.md  testing.md
docs/examples/: batch-create.md  crud-viewset.md  file-upload-download.md  graphql-node.md  graphql-query.md  index.md  websocket.md  word-filter.md
docs/exec-plans/completed/: 2026-06-24-apibase-nocov-tests.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/guides/: batch-operations.md  file-download.md  filters.md  graphql-types.md  graphql.md  index.md  permissions.md  serializers.md  viewsets.md  websocket.md
docs/reference/: archives.md  consumers.md  fields.md  filters.md  index.md  paginations.md  permissions.md  renderers.md  routers.md  serializers.md  settings.md  storages.md  urn.md  utils.md  viewsets.md
docs/reference/contrib/: index.md  models.md  schema.md
docs/reference/graphql/: connections.md  fields.md  index.md  mixins.md
docs/tutorials/: basic-api.md  custom-filters.md  graphql-api.md  index.md  nested-serializers.md  real-world-graphql.md  real-world-rest.md  testing.md
scripts/: fmt-commit.sh  gen_api_docs.py
tests/: models.py  settings.py  test_apibase.py  test_batch.py  test_download_mixin.py  test_encoders.py  test_fields.py  test_filters.py  test_identity_characterization.py  test_nested_orphan_delete.py  test_permissions.py  test_settings.py  test_spectacular_adapter.py  test_urn.py  test_utils.py
web/: README.demo.md  manage.py
web/app/: settings.py
web/config/: asgi.py  settings.py  urls.py  wsgi.py
web/demo/: admin.py  apps.py  filters.py  models.py  schema.py  serializers.py  viewsets.py
web/demo/migrations/: 0001_initial.py
web/tests/: test_demo_site.py  test_filters.py  test_graphql_filters.py
