[project]
name = "apibase"
version = "0.2.0"
description = ""
authors = [
  { name = "user.name", email = "gmail@hdknr.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
  "graphene-django>=3.0,<4.0",
  "django-cors-headers>=4.0,<5.0",
  "djangorestframework>=3.15,<4.0",
  "gql>=3.0,<4.0",
  # NOTE: legacy package incompatible with Django 5 / Graphene 3; consider 'channels-graphql-ws'.
  # "django-channels-graphql-ws>=0.7.4,<0.8.0",
  "djangorestframework-csv>=2.1.0,<3.0.0",
  "factory-boy>=3.2.1,<4.0.0",
  "django-filter>=23.0",
  "jaconv>=0.4.0",
  "urllib3>=1.26.20",
  "ulid-py>=1.1.0",
  "Django>=5,<6",
]

#[project.optional-dependencies]
# Keep this section empty unless you ship user-facing extras.

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "venv",
    "migrations",
]

[tool.ruff.format]
# Keep defaults (Black-compatible); line-length is set above.

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"web/costs/reports/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["apibase"]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pytest>=7.0.0,<8.0.0",
    "django-extensions>=3.2",
    "pytest-django>=4.8",
    "PyYAML>=6.0",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.config.settings"
addopts = "-q -ra"
testpaths = ["web/tests"]
python_files = ["test_*.py"]
