[project]
name = "apibase"
version = "0.2.0"
description = ""
authors = [
    { name = "user.name", email = "gmail@hdknr.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2,<5.3",
    "django-channels-graphql-ws>=0.9.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-csv>=3.0.0",
    "djangorestframework-filters",
    "factory-boy>=3.3.0",
    "gql>=4,<5",
    "graphene>=3.4.0",
    "graphene-django>=3.2.0",
    "jaconv>=0.3.4",
    "ulid-py>=1.1.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-channels-graphql-ws = { git = "https://github.com/shiftone-ai/DjangoChannelsGraphqlWs", branch = "feature/py312" }
djangorestframework-filters = { git = "https://github.com/philipn/django-rest-framework-filters.git" }


[tool.ruff]
line-length = 119
exclude = [
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "I", "C4", "UP"]
ignore = [
    "D", # Docstringを書かなくてもよいようにする
    "T201", # 'print()'を使えるようにする
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = false
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
